# finding_shortest_way

./: .gitignore  CMakeLists.txt  main.cpp
Model/: CMakeLists.txt  model.cpp  model.h
View/: CMakeLists.txt  view.cpp  view.h
Widget/: CMakeLists.txt  widget.cpp  widget.h
